--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ html {
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 /* Hide scrollbars for all elements */
